Se continua con la implementacion del modulo login. Se aplica la encriptacion para guardar contraseñass, se crea el endpoint para usuarios, y se implementa la primer prueba de validacion de roles

--- a/ProdigyPlanningAPI/appsettings.json
+++ b/ProdigyPlanningAPI/appsettings.json
@@ -12,6 +12,7 @@
   "Jwt": {
     "Issuer": "https://my-resource.com",
     "Audience": "https://my-resource.com",
-    "Key": "oqa8F`jwj67{'xo1;]%n!apyPuWqzME="
+    "Key": "oqa8F`jwj67{'xo1;]%n!apyPuWqzME=",
+    "Subject": "ProdigyPlanningAPISubject"
   }
 }
