Se adjunta query de creacion de usuario admin y se actualzia el conn_string para utilizar este nuevo usuario

--- a/ProdigyPlanningAPI/appsettings.json
+++ b/ProdigyPlanningAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conn_string_events": "Data Source=localhost,1433;Initial Catalog=ProdigyPlanning;User ID=sa;Password=65823_jm;TrustServerCertificate=True"
+    "conn_string_events": "Data Source=localhost,1433;Initial Catalog=ProdigyPlanning;User ID=user_PP;Password=O4+AX54uv=(h;TrustServerCertificate=True"
   },
   "Jwt": {
     "Issuer": "https://my-resource.com",
